# toki-monsi-rust

./: Cargo.toml  README.md
src/: command_line.rs  lib.rs  main.rs  palindrome.rs  sorting.rs  timing.rs  words.rs
src/palindrome/: ascii.rs  fragment.rs  generator.rs  graph.rs  tests.rs  vec_ext.rs
src/palindrome/fragment/: tests.rs  vec_ext.rs
src/palindrome/graph/: edge.rs  node.rs  start_edge.rs  tests.rs
