[package]
name = "toki-monsi-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
priority-queue = "1.2.2"
rayon = "1.5.3"
unicode-segmentation = "1.9.0"
caseless = "0.2.1"
structopt = "0.3.26"

[dev-dependencies]
test-case = "2.1.0"
